fixed errors at Earthoverview file + added  footer + more readable code + added links to external sites for more information + better UI experience

--- a/src/App.css
+++ b/src/App.css
@@ -3,35 +3,15 @@
 @tailwind utilities;
 
 
+/* Box Div */
+.wrapper .box {
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(0deg);
+}
 
-
-/* Define the variable in a selector */
-
-
-  
-  /* You can create additional rules for different values of --i */
-  .box span:nth-child(2) {
-    --i: 2;
-  }
-  
-  .box span:nth-child(3) {
-    --i: 3;
-  }
-  .box span:nth-child(4) {
-    --i: 4;
-  }
-  
-  .box span:nth-child(5) {
-    --i: 5;
-  }
-  .box span:nth-child(6) {
-    --i: 6;
-  }
-  
-  .box span:nth-child(7) {
-    --i: 7;
-  }
-  .box span:nth-child(8) {
-    --i: 8;
-  }
-  
+/* Child Styles */
+.wrapper .box span {
+  transform-style: preserve-3d;
+  transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+  -webkit-box-reflect: below 0px linear-gradient(transparent, transparent, #0004);
+}
